--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,16 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 FaceCard
+
+  ul#messages
+  
+  include upload_form.html
+
+  video#video(width='640', height='480', autoplay='')
+  canvas#canvas(width='640', height='480')
+  script(src='javascripts/faceplusplus.js')
+  script(src='/socket.io/socket.io.js')
+  script(src='https://code.jquery.com/jquery-1.11.1.js')
+  script(src='javascripts/receive.js')
+
